[gd_scene load_steps=16 format=4 uid="uid://h3pbtoysww88"]

[ext_resource type="Script" uid="uid://cdulmmlrshon1" path="res://Levels/tutorial.gd" id="1_nhn8q"]
[ext_resource type="PackedScene" uid="uid://cl0vg0wlg3oot" path="res://UI_HUD/PauseMenu.tscn" id="2_n00sr"]
[ext_resource type="Texture2D" uid="uid://gm4p03i5l8qx" path="res://maps/lv2Dungeon_Tileset-export-export.png" id="3_ixs1y"]
[ext_resource type="Texture2D" uid="uid://2erfuf20tgyp" path="res://maps/Doors4.png" id="4_o4sb5"]
[ext_resource type="Texture2D" uid="uid://ctsafcutkecf2" path="res://maps/Doorslower.png" id="5_tqhs8"]
[ext_resource type="Texture2D" uid="uid://bycxci5hxsiag" path="res://Player/tuto1.png" id="7_4d44r"]
[ext_resource type="PackedScene" uid="uid://cvqxihjksyiv8" path="res://maps/fading.tscn" id="7_tqhs8"]
[ext_resource type="Texture2D" uid="uid://bfs0sev0r53tw" path="res://Player/tuto2.png" id="8_ggrfr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4d44r"]
texture = ExtResource("3_ixs1y")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ggrfr"]
sources/0 = SubResource("TileSetAtlasSource_4d44r")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vpak1"]
texture = ExtResource("3_ixs1y")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4w4cy"]
texture = ExtResource("4_o4sb5")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8lhii"]
texture = ExtResource("5_tqhs8")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_uwq88"]
sources/0 = SubResource("TileSetAtlasSource_vpak1")
sources/1 = SubResource("TileSetAtlasSource_4w4cy")
sources/2 = SubResource("TileSetAtlasSource_8lhii")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqhs8"]
size = Vector2(32, 35)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_nhn8q")

[node name="PauseMenu" parent="." instance=ExtResource("2_n00sr")]
visible = false

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASAA0AAAAHAAEAAAASAA4AAAAJAAAAAAASAA8AAAAIAAAAAAASABAAAAAIAAEAAAASABEAAAAIAAIAAAASABIAAAAJAAAAAAAoAA0AAAAHAAEAAAAoAA4AAAAHAAIAAAAoAA8AAAAIAAAAAAAoABAAAAAIAAEAAAAoABEAAAAIAAIAAAAoABIAAAAHAAAAAAAoAAwAAAAHAAAAAAAoAAsAAAAGAAIAAAAoAAoAAAAGAAEAAAASAAwAAAAJAAAAAAASAAsAAAAIAAIAAAASAAoAAAAIAAEAAAASABMAAAAJAAEAAAASABQAAAAJAAIAAAASABUAAAAIAAIAAAAoAAgAAAAHAAIAAAAoAAkAAAAGAAAAAAAoABMAAAAHAAEAAAAoABQAAAAHAAIAAAAoABUAAAAIAAIAAAAnABQAAAAGAAIAAAAnABUAAAAHAAIAAAAkABQAAAAHAAIAAAAkABUAAAAIAAIAAAAlABQAAAAIAAIAAAAlABUAAAAJAAIAAAAmABQAAAAJAAIAAAAmABUAAAAGAAIAAAASAAgAAAAJAAIAAAASAAkAAAAIAAAAAAATAAgAAAAGAAIAAAATAAkAAAAJAAAAAAAUAAgAAAAHAAIAAAAUAAkAAAAGAAAAAAAVAAgAAAAIAAIAAAAVAAkAAAAHAAAAAAAWAAgAAAAJAAIAAAAWAAkAAAAIAAAAAAAXAAgAAAAGAAIAAAAXAAkAAAAJAAAAAAAXAAYAAAAGAAAAAAAXAAcAAAAGAAEAAAAYAAYAAAAHAAAAAAAYAAcAAAAHAAEAAAAZAAYAAAAIAAAAAAAZAAcAAAAIAAEAAAAaAAYAAAAJAAAAAAAaAAcAAAAJAAEAAAAbAAYAAAAGAAAAAAAbAAcAAAAGAAEAAAAcAAYAAAAHAAAAAAAcAAcAAAAHAAEAAAAdAAYAAAAIAAAAAAAdAAcAAAAIAAEAAAAeAAYAAAAJAAAAAAAeAAcAAAAJAAEAAAAfAAYAAAAGAAAAAAAfAAcAAAAGAAEAAAAgAAYAAAAHAAAAAAAgAAcAAAAHAAEAAAAhAAYAAAAIAAAAAAAhAAcAAAAIAAEAAAAiAAYAAAAJAAAAAAAiAAcAAAAJAAEAAAAjAAYAAAAGAAAAAAAjAAcAAAAGAAEAAAAkAAYAAAAHAAAAAAAkAAcAAAAHAAEAAAAlAAYAAAAIAAAAAAAlAAcAAAAIAAEAAAAmAAYAAAAJAAAAAAAmAAcAAAAJAAEAAAAnAAYAAAAGAAAAAAAnAAcAAAAGAAEAAAAoAAYAAAAHAAAAAAAoAAcAAAAHAAEAAAASAAcAAAAJAAEAAAASAAYAAAAJAAAAAAATAAYAAAAGAAAAAAAUAAYAAAAHAAAAAAAVAAYAAAAIAAAAAAAWAAYAAAAJAAAAAAAUAAcAAAAHAAEAAAAVAAcAAAAIAAEAAAAWAAcAAAAJAAEAAAAYAAgAAAAHAAIAAAAZAAgAAAAIAAIAAAAaAAgAAAAJAAIAAAATAAcAAAAGAAEAAAAPAA4AAAAGAAIAAAAPAAwAAAAGAAIAAAAPAA0AAAAGAAEAAAAnABMAAAAGAAEAAAAPAAYAAAAGAAAAAAAPAAcAAAAGAAEAAAAPAAgAAAAGAAAAAAAQAAYAAAAHAAAAAAAQAAcAAAAHAAEAAAAQAAgAAAAHAAIAAAARAAYAAAAIAAAAAAARAAcAAAAIAAEAAAARAAgAAAAIAAIAAAAbAAgAAAAGAAIAAAAcAAgAAAAHAAIAAAAdAAgAAAAIAAIAAAAeAAgAAAAJAAIAAAAfAAgAAAAGAAIAAAAgAAgAAAAHAAIAAAAhAAgAAAAIAAIAAAAiAAgAAAAJAAIAAAAjAAgAAAAGAAIAAAAkAAgAAAAHAAIAAAAlAAgAAAAIAAIAAAAmAAgAAAAJAAIAAAAQAAkAAAAGAAAAAAAQAAoAAAAGAAEAAAAQAAsAAAAGAAIAAAARAAkAAAAHAAAAAAARAAoAAAAHAAEAAAARAAsAAAAHAAIAAAATAAoAAAAJAAEAAAATAAsAAAAJAAIAAAAUAAoAAAAGAAEAAAAUAAsAAAAGAAIAAAAVAAoAAAAHAAEAAAAVAAsAAAAHAAIAAAAWAAoAAAAIAAEAAAAWAAsAAAAIAAIAAAAXAAoAAAAJAAEAAAAXAAsAAAAJAAIAAAAYAAkAAAAGAAAAAAAYAAoAAAAGAAEAAAAYAAsAAAAGAAIAAAAZAAkAAAAHAAAAAAAZAAoAAAAHAAEAAAAZAAsAAAAHAAIAAAAaAAkAAAAIAAAAAAAaAAoAAAAIAAEAAAAaAAsAAAAIAAIAAAAbAAkAAAAJAAAAAAAbAAoAAAAJAAEAAAAbAAsAAAAJAAIAAAAcAAkAAAAGAAAAAAAcAAoAAAAGAAEAAAAcAAsAAAAGAAIAAAAdAAkAAAAHAAAAAAAdAAoAAAAHAAEAAAAdAAsAAAAHAAIAAAAeAAkAAAAIAAAAAAAeAAoAAAAIAAEAAAAeAAsAAAAIAAIAAAAfAAkAAAAJAAAAAAAfAAoAAAAJAAEAAAAfAAsAAAAJAAIAAAAgAAkAAAAGAAAAAAAgAAoAAAAGAAEAAAAgAAsAAAAGAAIAAAAhAAkAAAAHAAAAAAAhAAoAAAAHAAEAAAAhAAsAAAAHAAIAAAAiAAkAAAAIAAAAAAAiAAoAAAAIAAEAAAAiAAsAAAAIAAIAAAAjAAkAAAAJAAAAAAAjAAoAAAAJAAEAAAAjAAsAAAAJAAIAAAAkAAkAAAAGAAAAAAAkAAoAAAAGAAEAAAAkAAsAAAAGAAIAAAAlAAkAAAAHAAAAAAAlAAoAAAAHAAEAAAAlAAsAAAAHAAIAAAAmAAkAAAAIAAAAAAAmAAoAAAAIAAEAAAAmAAsAAAAIAAIAAAAnAAkAAAAJAAAAAAAnAAoAAAAJAAEAAAAnAAsAAAAJAAIAAAAjAAwAAAAGAAAAAAAjAA0AAAAGAAEAAAAjAA4AAAAGAAIAAAAkAAwAAAAHAAAAAAAkAA0AAAAHAAEAAAAkAA4AAAAHAAIAAAAlAAwAAAAIAAAAAAAlAA0AAAAIAAEAAAAlAA4AAAAIAAIAAAAmAAwAAAAJAAAAAAAmAA0AAAAJAAEAAAAmAA4AAAAJAAIAAAAfAAwAAAAGAAAAAAAfAA0AAAAGAAEAAAAfAA4AAAAGAAIAAAAgAAwAAAAHAAAAAAAgAA0AAAAHAAEAAAAgAA4AAAAHAAIAAAAhAAwAAAAIAAAAAAAhAA0AAAAIAAEAAAAhAA4AAAAIAAIAAAAiAAwAAAAJAAAAAAAiAA0AAAAJAAEAAAAiAA4AAAAJAAIAAAAbAAwAAAAGAAAAAAAbAA0AAAAGAAEAAAAbAA4AAAAGAAIAAAAcAAwAAAAHAAAAAAAcAA0AAAAHAAEAAAAcAA4AAAAHAAIAAAAdAAwAAAAIAAAAAAAdAA0AAAAIAAEAAAAdAA4AAAAIAAIAAAAeAAwAAAAJAAAAAAAeAA0AAAAJAAEAAAAeAA4AAAAJAAIAAAAWAAwAAAAJAAAAAAAWAA0AAAAJAAEAAAAWAA4AAAAJAAIAAAAXAAwAAAAGAAAAAAAXAA0AAAAGAAEAAAAXAA4AAAAGAAIAAAAYAAwAAAAHAAAAAAAYAA0AAAAHAAEAAAAYAA4AAAAHAAIAAAAZAAwAAAAIAAAAAAAZAA0AAAAIAAEAAAAZAA4AAAAIAAIAAAAaAAwAAAAJAAAAAAAaAA0AAAAJAAEAAAAaAA4AAAAJAAIAAAATAAwAAAAGAAAAAAATAA0AAAAIAAEAAAATAA4AAAAGAAIAAAAUAAwAAAAHAAAAAAAUAA0AAAAHAAEAAAAUAA4AAAAHAAIAAAAVAAwAAAAIAAAAAAAVAA0AAAAIAAEAAAAVAA4AAAAIAAIAAAAQAA8AAAAGAAAAAAAQABAAAAAGAAEAAAAQABEAAAAGAAIAAAARAA8AAAAHAAAAAAARABAAAAAHAAEAAAARABEAAAAHAAIAAAATAA8AAAAJAAAAAAATABAAAAAJAAEAAAATABEAAAAJAAIAAAAUAA8AAAAIAAAAAAAUABAAAAAIAAEAAAAUABEAAAAIAAIAAAAVAA8AAAAJAAAAAAAVABAAAAAJAAEAAAAVABEAAAAJAAIAAAAWAA8AAAAGAAAAAAAWABAAAAAGAAEAAAAWABEAAAAGAAIAAAAXAA8AAAAHAAAAAAAXABAAAAAHAAEAAAAXABEAAAAHAAIAAAAYAA8AAAAIAAAAAAAYABAAAAAIAAEAAAAYABEAAAAIAAIAAAAZAA8AAAAJAAAAAAAZABAAAAAJAAEAAAAZABEAAAAJAAIAAAAaAA8AAAAGAAAAAAAaABAAAAAGAAEAAAAaABEAAAAGAAIAAAAbAA8AAAAHAAAAAAAbABAAAAAHAAEAAAAbABEAAAAHAAIAAAAcAA8AAAAIAAAAAAAcABAAAAAIAAEAAAAcABEAAAAIAAIAAAAdAA8AAAAJAAAAAAAdABAAAAAJAAEAAAAdABEAAAAJAAIAAAAeAA8AAAAGAAAAAAAeABAAAAAGAAEAAAAeABEAAAAGAAIAAAAfAA8AAAAHAAAAAAAfABAAAAAHAAEAAAAfABEAAAAHAAIAAAAgAA8AAAAIAAAAAAAgABAAAAAIAAEAAAAgABEAAAAIAAIAAAAhAA8AAAAJAAAAAAAhABAAAAAJAAEAAAAhABEAAAAJAAIAAAAiAA8AAAAGAAAAAAAiABAAAAAGAAEAAAAiABEAAAAGAAIAAAAjAA8AAAAHAAAAAAAjABAAAAAHAAEAAAAjABEAAAAHAAIAAAAkAA8AAAAIAAAAAAAkABAAAAAIAAEAAAAkABEAAAAIAAIAAAAlAA8AAAAJAAAAAAAlABAAAAAJAAEAAAAlABEAAAAJAAIAAAAkABIAAAAHAAAAAAAkABMAAAAHAAEAAAAlABIAAAAIAAAAAAAlABMAAAAIAAEAAAAmABIAAAAJAAAAAAAmABMAAAAJAAEAAAAnABIAAAAGAAAAAAAgABIAAAAHAAAAAAAgABMAAAAHAAEAAAAgABQAAAAHAAIAAAAhABIAAAAIAAAAAAAhABMAAAAIAAEAAAAhABQAAAAIAAIAAAAiABIAAAAJAAAAAAAiABMAAAAJAAEAAAAiABQAAAAJAAIAAAAjABIAAAAGAAAAAAAjABMAAAAGAAEAAAAjABQAAAAGAAIAAAAcABIAAAAHAAAAAAAcABMAAAAHAAEAAAAcABQAAAAHAAIAAAAdABIAAAAIAAAAAAAdABMAAAAIAAEAAAAdABQAAAAIAAIAAAAeABIAAAAJAAAAAAAeABMAAAAJAAEAAAAeABQAAAAJAAIAAAAfABIAAAAGAAAAAAAfABMAAAAGAAEAAAAfABQAAAAGAAIAAAAYABIAAAAHAAAAAAAYABMAAAAHAAEAAAAYABQAAAAHAAIAAAAZABIAAAAIAAAAAAAZABMAAAAIAAEAAAAZABQAAAAIAAIAAAAaABIAAAAJAAAAAAAaABMAAAAJAAEAAAAaABQAAAAJAAIAAAAbABIAAAAGAAAAAAAbABMAAAAGAAEAAAAbABQAAAAGAAIAAAAXABIAAAAGAAAAAAAXABMAAAAGAAEAAAAXABQAAAAGAAIAAAATABIAAAAGAAAAAAATABMAAAAGAAEAAAATABQAAAAGAAIAAAAUABIAAAAHAAAAAAAUABMAAAAHAAEAAAAUABQAAAAHAAIAAAAVABIAAAAIAAAAAAAVABMAAAAIAAEAAAAVABQAAAAIAAIAAAAWABIAAAAJAAAAAAAWABMAAAAJAAEAAAAWABQAAAAJAAIAAAAPABIAAAAGAAIAAAAPABMAAAAGAAEAAAAPABQAAAAGAAAAAAAQABIAAAAHAAAAAAAQABMAAAAHAAEAAAAQABQAAAAHAAIAAAARABIAAAAIAAAAAAARABMAAAAIAAEAAAARABQAAAAIAAIAAAAmAA8AAAAGAAAAAAAmABAAAAAGAAEAAAAmABEAAAAGAAIAAAAnAA8AAAAHAAAAAAAnABAAAAAHAAEAAAAnABEAAAAHAAIAAAApAA8AAAAJAAAAAAApABAAAAAJAAEAAAApABEAAAAJAAIAAAAnAAwAAAAGAAAAAAAnAA0AAAAGAAEAAAAnAA4AAAAGAAIAAAApAAwAAAAIAAAAAAApAA0AAAAIAAEAAAApAA4AAAAIAAIAAAAqAAwAAAAJAAAAAAAqAA0AAAAJAAEAAAAqAA4AAAAJAAIAAAAnAAgAAAAGAAIAAAApAAYAAAAIAAAAAAApAAcAAAAIAAEAAAApAAgAAAAIAAIAAAAqAAYAAAAJAAAAAAAqAAcAAAAJAAEAAAAqAAgAAAAJAAIAAAApAAkAAAAHAAAAAAApAAoAAAAHAAEAAAApAAsAAAAHAAIAAAAqAAkAAAAIAAAAAAAqAAoAAAAIAAEAAAAqAAsAAAAIAAIAAAArAAkAAAAJAAAAAAArAAoAAAAJAAEAAAArAAsAAAAJAAIAAAApABIAAAAIAAAAAAApABMAAAAIAAEAAAApABQAAAAIAAIAAAAqABIAAAAJAAAAAAAqABMAAAAJAAEAAAAqABQAAAAJAAIAAAAQABUAAAAGAAIAAAARABUAAAAHAAIAAAATABUAAAAJAAIAAAAUABUAAAAGAAIAAAAVABUAAAAHAAIAAAAWABUAAAAIAAIAAAAXABUAAAAJAAIAAAAYABUAAAAGAAIAAAAZABUAAAAHAAIAAAAaABUAAAAIAAIAAAAbABUAAAAJAAIAAAAcABUAAAAGAAIAAAAdABUAAAAHAAIAAAAeABUAAAAIAAIAAAAfABUAAAAJAAIAAAAgABUAAAAGAAIAAAAhABUAAAAHAAIAAAAiABUAAAAGAAIAAAAjABUAAAAHAAIAAAApABUAAAAJAAIAAAAPABUAAAAGAAEAAAAPAA8AAAAGAAEAAAAPABAAAAAGAAIAAAAPABEAAAAGAAEAAAAPAAsAAAAGAAEAAAAPAAkAAAAGAAEAAAAPAAoAAAAGAAIAAAArAAYAAAAGAAAAAAArAAcAAAAGAAEAAAArAAgAAAAGAAIAAAArAAwAAAAGAAAAAAArAA0AAAAGAAEAAAArAA4AAAAGAAAAAAArAA8AAAAGAAEAAAArABAAAAAGAAAAAAArABEAAAAGAAEAAAArABIAAAAGAAAAAAArABMAAAAGAAEAAAArABQAAAAGAAIAAAAQAAwAAAAHAAAAAAARAAwAAAAIAAAAAAAQAA4AAAAHAAAAAAARAA4AAAAIAAAAAAAQAA0AAAAHAAEAAAARAA0AAAAGAAEAAAAqABUAAAAHAAEAAAArABUAAAAGAAEAAAAqABAAAAAGAAEAAAAqAA8AAAAHAAEAAAAqABEAAAAHAAEAAAA=")
tile_set = SubResource("TileSet_ggrfr")

[node name="Walls" type="TileMapLayer" parent="Ground"]
tile_map_data = PackedByteArray("AAAOAAUAAAAAAAAAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAIAAAAOAAgAAAAAAAEAAAAOAAkAAAAAAAIAAAAOAAoAAAAAAAMAAAAOAAsAAAAAAAMAAAAOAAwAAAAAAAEAAAAOAA0AAAAAAAIAAAAOAA4AAAAAAAMAAAAOAA8AAAAAAAEAAAAOABAAAAAAAAEAAAAOABEAAAAAAAIAAAAOABIAAAAAAAEAAAAOABMAAAAAAAIAAAAOABQAAAAAAAEAAAAOABUAAAAAAAMAAAAOABYAAAAAAAQAAAAOABcAAAAAAAUAAAAPAAUAAAABAAAAAAAPABYAAAABAAQAAAAPABcAAAABAAUAAAAQAAUAAAACAAAAAAAQABYAAAACAAQAAAAQABcAAAACAAUAAAARAAUAAAADAAAAAAARABYAAAADAAQAAAARABcAAAADAAUAAAASAAUAAAAEAAAAAAASABYAAAABAAQAAAASABcAAAABAAUAAAATAAUAAAABAAAAAAATABYAAAACAAQAAAATABcAAAACAAUAAAAUAAUAAAACAAAAAAAUABYAAAABAAQAAAAUABcAAAABAAUAAAAVAAUAAAADAAAAAAAVABYAAAACAAQAAAAVABcAAAACAAUAAAAWAAUAAAAEAAAAAAAWABYAAAADAAQAAAAWABcAAAADAAUAAAAXAAUAAAABAAAAAAAXABYAAAAEAAQAAAAXABcAAAAEAAUAAAAYAAUAAAACAAAAAAAYABYAAAADAAQAAAAYABcAAAADAAUAAAAZAAUAAAADAAAAAAAZABYAAAABAAQAAAAZABcAAAABAAUAAAAaAAUAAAABAAAAAAAaABYAAAACAAQAAAAaABcAAAACAAUAAAAbAAUAAAACAAAAAAAbABYAAQAAAAAAAAAbABcAAgAAAAAAAAAcAAUAAAADAAAAAAAcABYAAQABAAAAAAAcABcAAgABAAAAAAAdAAUAAAABAAAAAAAdABYAAAADAAQAAAAdABcAAAADAAUAAAAeAAUAAAACAAAAAAAeABYAAAABAAQAAAAeABcAAAABAAUAAAAfAAUAAAADAAAAAAAfABYAAAACAAQAAAAfABcAAAACAAUAAAAgAAUAAAAEAAAAAAAgABYAAAADAAQAAAAgABcAAAADAAUAAAAhAAUAAAABAAAAAAAhABYAAAABAAQAAAAhABcAAAABAAUAAAAiAAUAAAACAAAAAAAiABYAAAACAAQAAAAiABcAAAACAAUAAAAjAAUAAAADAAAAAAAjABYAAAADAAQAAAAjABcAAAADAAUAAAAkAAUAAAABAAAAAAAkABYAAAABAAQAAAAkABcAAAABAAUAAAAlAAUAAAACAAAAAAAlABYAAAACAAQAAAAlABcAAAACAAUAAAAmAAUAAAADAAAAAAAmABYAAAABAAQAAAAmABcAAAABAAUAAAAnAAUAAAABAAAAAAAnABYAAAACAAQAAAAnABcAAAACAAUAAAAoAAUAAAABAAAAAAAoABYAAAABAAQAAAAoABcAAAABAAUAAAApAAUAAAACAAAAAAApABYAAAACAAQAAAApABcAAAACAAUAAAAqAAUAAAADAAAAAAAqABYAAAADAAQAAAAqABcAAAADAAUAAAArAAUAAAAEAAAAAAArABYAAAAEAAQAAAArABcAAAAEAAUAAAAsAAUAAAAFAAAAAAAsAAYAAAAFAAEAAAAsAAcAAAAFAAIAAAAsAAgAAAAFAAMAAAAsAAkAAAAFAAEAAAAsAAoAAAAFAAIAAAAsAAsAAAAFAAEAAAAsAAwAAAAFAAIAAAAsAA0AAAAFAAMAAAAsAA4AAAAFAAEAAAAsAA8AAAAFAAIAAAAsABAAAAAFAAMAAAAsABEAAAAFAAMAAAAsABIAAAAFAAEAAAAsABMAAAAFAAIAAAAsABQAAAAFAAMAAAAsABUAAAAFAAMAAAAsABYAAAAFAAQAAAAsABcAAAAFAAUAAAA=")
tile_set = SubResource("TileSet_uwq88")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(448, 366)
shape = SubResource("RectangleShape2D_tqhs8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(456, 227)
zoom = Vector2(1.5, 1.5)

[node name="Fading" parent="." instance=ExtResource("7_tqhs8")]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.68235296)
position = Vector2(350, 262)
texture = ExtResource("7_4d44r")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.6862745)
position = Vector2(571, 260)
texture = ExtResource("8_ggrfr")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="Fading/FadingBackground/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="PauseMenu"]
[editable path="Fading"]
